--- a/setup-package-server/pkg-nginx.conf
+++ b/setup-package-server/pkg-nginx.conf
@@ -1,10 +1,16 @@
+
+worker_processes  auto;
+events {
+    worker_connections  1024;
+}
+
 http {
     include       /usr/local/etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
     #access_log  logs/access.log  main;
 
@@ -21,5 +27,14 @@ http {
         server_name  %%SITE_NAME%%;
         root %%DATA_DIR%%;
         autoindex on;
+        
+        #Setup the logging of ISO/PKG downloads (ignores other access)
+        location ~* \.(?:iso)$ {
+          access_log /var/log/nginx-iso.log main;
+        }
+        location ~* \.(?:txz)$ {
+          access_log /var/log/nginx-pkg.log main;
+        }
+
     }
 }
