Add a monthly automation to the stats jenkinsfile Ensure the nginx config for the package server uses the same log file.

--- a/setup-package-server/pkg-nginx.conf
+++ b/setup-package-server/pkg-nginx.conf
@@ -28,12 +28,9 @@ http {
         root %%DATA_DIR%%;
         autoindex on;
         
-        #Setup the logging of ISO/PKG downloads (ignores other access)
-        location ~* \.(?:iso)$ {
-          access_log /var/log/nginx-iso.log main;
-        }
-        location ~* \.(?:txz)$ {
-          access_log /var/log/nginx-pkg.log main;
+        #Setup the logging of ISO/PKG downloads only (ignores other access)
+        location ~* \.(?:iso|txz)$ {
+          access_log /var/log/nginx-stats.log main;
         }
 
     }
