Update the trident-installer port overlay to the latest from source.

--- a/trident-ports/trident-installer/Makefile
+++ b/trident-ports/trident-installer/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	trident-installer
-PORTVERSION=	201807260755
+PORTVERSION=	201808071514
 CATEGORIES=	trident
 
 MAINTAINER=	ken@ixsystems.com
@@ -15,7 +15,8 @@ RUN_DEPENDS=	lumina-coreutils>=0:x11/lumina-coreutils \
 		xinit>=0:x11/xinit \
 		/boot/modules/drm.ko:graphics/drm-next-kmod \
 		xorg-minimal>=0:x11/xorg-minimal \
-		xf86-video-scfb>=0:x11-drivers/xf86-video-scfb
+		xf86-video-scfb>=0:x11-drivers/xf86-video-scfb \
+		setxkbmap>=0:x11/setxkbmap
 
 USES=	qmake qt:5
 USE_QT=	core gui widgets svg concurrent \
@@ -23,7 +24,7 @@ USE_QT=	core gui widgets svg concurrent \
 USE_GITHUB=	yes
 GH_ACCOUNT=	project-trident
 GH_PROJECT=	trident-installer
-GH_TAGNAME=	ae8763f8b91b376feb94398a4e0503a8a01d2462
+GH_TAGNAME=	10080492f7cb85c2caab2ad25a9959c9e9d06316
 WRKSRC_SUBDIR=	src-qt5
 
 .include <bsd.port.mk>
