Resync the ports overlay files. This includes the fix to the lumina port templates to align with the new USES framework for Qt/Qmake

--- a/ports-overlay/deskutils/lumina-screenshot/Makefile
+++ b/ports-overlay/deskutils/lumina-screenshot/Makefile
@@ -2,7 +2,7 @@
 
 PORTNAME=	lumina-screenshot
 PORTVERSION=	1.4.2
-PORTREVISION=	201808100810
+PORTREVISION=	201808101006
 CATEGORIES=	deskutils
 
 MAINTAINER=	jt@ixsystems.com
@@ -21,13 +21,13 @@ I18N_DESC= Install localization files
 
 MAKE_JOBS_UNSAFE=yes
 
-USES=           qmake
-USE_QT5=	core gui widgets network svg \
+USES=		qmake qt:5
+USE_QT=		core gui widgets network svg \
 		buildtools_build x11extras concurrent multimedia
 USE_GITHUB=	yes
 GH_ACCOUNT=	trueos
 GH_PROJECT=	lumina
-GH_TAGNAME=	a9a6c9daeb450f4cee3eb7c077d2abad15d81415
+GH_TAGNAME=	a549a994aae74d93deb5011777e2117e77b63a02
 WRKSRC_SUBDIR=	src-qt5/desktop-utils/${PORTNAME}
 
 .if${PORT_OPTIONS:MI18N}
