--- a/ports-overlay/deskutils/lumina-pdf/Makefile
+++ b/ports-overlay/deskutils/lumina-pdf/Makefile
@@ -2,7 +2,7 @@
 
 PORTNAME=	lumina-pdf
 PORTVERSION=	1.4.2
-PORTREVISION=	201808100810
+PORTREVISION=	201808101006
 CATEGORIES=	deskutils
 
 MAINTAINER=	jt@ixsystems.com
@@ -36,13 +36,13 @@ I18N_USE=			qt5=linguist_build
 
 MAKE_JOBS_UNSAFE=yes
 
-USES=           qmake
-USE_QT5=	core gui widgets network svg multimedia \
+USES=		qmake qt:5
+USE_QT=		core gui widgets network svg multimedia \
 		buildtools_build x11extras concurrent printsupport
 USE_GITHUB=	yes
 GH_ACCOUNT=	trueos
 GH_PROJECT=	lumina
-GH_TAGNAME=	a9a6c9daeb450f4cee3eb7c077d2abad15d81415
+GH_TAGNAME=	a549a994aae74d93deb5011777e2117e77b63a02
 WRKSRC_SUBDIR=	src-qt5/desktop-utils/${PORTNAME}
 
 .include <bsd.port.mk>
