--- a/ports-overlay/x11/lumina-coreutils/Makefile
+++ b/ports-overlay/x11/lumina-coreutils/Makefile
@@ -2,7 +2,7 @@
 
 PORTNAME=	lumina-coreutils
 PORTVERSION=	1.4.2
-PORTREVISION=	201808100810
+PORTREVISION=	201808101006
 CATEGORIES=	x11
 
 MAINTAINER=	jt@ixsystems.com
@@ -23,16 +23,16 @@ I18N_DESC= Install localization files
 
 MAKE_JOBS_UNSAFE=yes
 
-USES=		qmake
+USES=		qmake qt:5
 
 USE_LDCONFIG=	yes
-USE_QT5=	core gui widgets network svg imageformats \
+USE_QT=			core gui widgets network svg imageformats \
 		buildtools_build x11extras concurrent multimedia
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	trueos
 GH_PROJECT=	lumina
-GH_TAGNAME=	a9a6c9daeb450f4cee3eb7c077d2abad15d81415
+GH_TAGNAME=	a549a994aae74d93deb5011777e2117e77b63a02
 WRKSRC_SUBDIR=	src-qt5/core-utils
 
 .if${PORT_OPTIONS:MI18N}
