--- a/ports-overlay/deskutils/lumina-textedit/Makefile
+++ b/ports-overlay/deskutils/lumina-textedit/Makefile
@@ -2,7 +2,7 @@
 
 PORTNAME=	lumina-textedit
 PORTVERSION=	1.4.2
-PORTREVISION=	201808101006
+PORTREVISION=	201808101606
 CATEGORIES=	deskutils
 
 MAINTAINER=	jt@ixsystems.com
@@ -22,16 +22,16 @@ I18N_DESC= Install localization files
 MAKE_JOBS_UNSAFE=yes
 
 USES=		qmake qt:5
-USE_QT=		core gui widgets network svg \
+USE_QT=		core gui widgets network svg printsupport \
 		buildtools_build x11extras concurrent multimedia
 USE_GITHUB=	yes
 GH_ACCOUNT=	trueos
 GH_PROJECT=	lumina
-GH_TAGNAME=	a549a994aae74d93deb5011777e2117e77b63a02
+GH_TAGNAME=	2be80fd648c25e17b091e24c0e7312f289d78c82
 WRKSRC_SUBDIR=	src-qt5/desktop-utils/${PORTNAME}
 
 .if${PORT_OPTIONS:MI18N}
-USE_QT5+= linguist_build
+USE_QT+= linguist_build
 QMAKE_ARGS+=CONFIG+=WITH_I18N
 .endif
 
