Cleanup a couple minor errors in the build-server setup script/files

--- a/setup-build-server/poudriere-nginx.conf
+++ b/setup-build-server/poudriere-nginx.conf
@@ -1,5 +1,11 @@
+
+worker_processes  auto;
+events {
+    worker_connections  1024;
+}
+
 http {
-    include       mime.types;
+    include       nginx/mime.types;
     default_type  application/octet-stream;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
