--- a/ports-overlay/sysutils/sysadm/Makefile
+++ b/ports-overlay/sysutils/sysadm/Makefile
@@ -10,8 +10,8 @@ COMMENT=	SysAdm API server
 LICENSE=	BSD3CLAUSE
 
 WRKSRC_SUBDIR=	src
-USE_QT5=	concurrent core network buildtools_build qmake_build websockets sql
-USES=		pkgconfig tar:xz qmake ssl
+USE_QT=	concurrent core network buildtools_build qmake_build websockets sql
+USES=		qt:5 pkgconfig tar:xz qmake ssl
 MAKE_ARGS=	PREFIX=${STAGEDIR}${PREFIX}
 
 USE_GITHUB=	yes
