--- a/ports-overlay/sysutils/sysadm/Makefile
+++ b/ports-overlay/sysutils/sysadm/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	sysadm
-PORTVERSION=	201809010735
+PORTVERSION=	201809051030
 CATEGORIES=	sysutils
 
 MAINTAINER=	jt@ixsystems.com
@@ -10,14 +10,14 @@ COMMENT=	SysAdm API server
 LICENSE=	BSD3CLAUSE
 
 WRKSRC_SUBDIR=	src
-USE_QT=	concurrent core network buildtools_build websockets sql
-USES=		qt:5 pkgconfig tar:xz qmake ssl
+USES=		pkgconfig tar:xz qmake ssl qt:5
+USE_QT=	concurrent core network buildtools_build qmake_build websockets sql
 MAKE_ARGS=	PREFIX=${STAGEDIR}${PREFIX}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	trueos
 GH_PROJECT=	sysadm
-GH_TAGNAME=	67e687ba4cfbe4f1acb3b14f971bd29992e9518e
+GH_TAGNAME=	4b0d6334d1928d82fb9547ff8007e87cc4152a97
 
 .include <bsd.port.pre.mk>
 
