Fix the version of the trident/trident-icons port.

--- a/ports-overlay/trident/trident-icons/Makefile
+++ b/ports-overlay/trident/trident-icons/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	trident-icons
-PORTVERSION=	201807260759
+PORTVERSION=	201811120917
 CATEGORIES=	trident
 
 MAINTAINER=	jt@ixsystems.com
@@ -12,12 +12,17 @@ LICENSE=	BSD3CLAUSE
 USE_GITHUB=	yes
 GH_ACCOUNT=	project-trident
 GH_PROJECT=	trident-icons
-GH_TAGNAME=	473b010be4f925aff3241fb5efa0614bfa5f6136
+GH_TAGNAME=	0c3dbf82c6806b56b49d6f0f6cb79d29c4ec208a
 
 NO_BUILD=	yes
 
 do-install:
 	${MKDIR} ${STAGEDIR}/usr/local/share/icons
 	cd ${WRKSRC} && ${WRKSRC}/install-local.sh ${STAGEDIR}/usr/local/share/icons
+	(cd ${STAGEDIR}${PREFIX}/; ${FIND} . -type f \
+		| ${SED} -e 's,^\./,,g' \
+		| ${AWK} '{print length, $$0}' | ${SORT} -rn \
+		| cut -d " " -f 2- \
+		| ${AWK} '{print $$0 }' >> ${TMPPLIST})
 
 .include <bsd.port.mk>
