Update the trident-icons port. This should ensure that the complete icon set is available now.

--- a/ports-overlay/trident/trident-icons/Makefile
+++ b/ports-overlay/trident/trident-icons/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	trident-icons
-PORTVERSION=	201811120917
+PORTVERSION=	201811220731
 CATEGORIES=	trident
 
 MAINTAINER=	jt@ixsystems.com
@@ -12,15 +12,15 @@ LICENSE=	BSD3CLAUSE
 USE_GITHUB=	yes
 GH_ACCOUNT=	project-trident
 GH_PROJECT=	trident-icons
-GH_TAGNAME=	0c3dbf82c6806b56b49d6f0f6cb79d29c4ec208a
+GH_TAGNAME=	9d5523ab03401fb91dad8bb20d7521194e649557
 
 NO_BUILD=	yes
 
 do-install:
 	${MKDIR} ${STAGEDIR}/usr/local/share/icons
 	cd ${WRKSRC} && ${WRKSRC}/install-local.sh ${STAGEDIR}/usr/local/share/icons
-	(cd ${STAGEDIR}${PREFIX}/; ${FIND} . -type f \
-		| ${SED} -e 's,^\./,,g' \
+	(cd ${STAGEDIR}/; ${FIND} . \
+		| ${SED} -e 's,^\./,/,g' \
 		| ${AWK} '{print length, $$0}' | ${SORT} -rn \
 		| cut -d " " -f 2- \
 		| ${AWK} '{print $$0 }' >> ${TMPPLIST})
