Update the trident-icons port to ensure the automatic plist generation works properly.

--- a/ports-overlay/trident/trident-icons/Makefile
+++ b/ports-overlay/trident/trident-icons/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	trident-icons
-PORTVERSION=	201811220731
+PORTVERSION=	201811222056
 CATEGORIES=	trident
 
 MAINTAINER=	jt@ixsystems.com
@@ -12,14 +12,14 @@ LICENSE=	BSD3CLAUSE
 USE_GITHUB=	yes
 GH_ACCOUNT=	project-trident
 GH_PROJECT=	trident-icons
-GH_TAGNAME=	9d5523ab03401fb91dad8bb20d7521194e649557
+GH_TAGNAME=	0a20201c49b8553b3944675c17bedfb223b1e90d
 
 NO_BUILD=	yes
 
 do-install:
 	${MKDIR} ${STAGEDIR}/usr/local/share/icons
 	cd ${WRKSRC} && ${WRKSRC}/install-local.sh ${STAGEDIR}/usr/local/share/icons
-	(cd ${STAGEDIR}/; ${FIND} . \
+	(cd ${STAGEDIR}/; ${FIND} . -not -type d \
 		| ${SED} -e 's,^\./,/,g' \
 		| ${AWK} '{print length, $$0}' | ${SORT} -rn \
 		| cut -d " " -f 2- \
