Quick fix to ensure the www/falkon port syncs with some changes to upstream ports framework

--- a/ports-overlay/www/falkon/Makefile
+++ b/ports-overlay/www/falkon/Makefile
@@ -12,7 +12,7 @@ COMMENT=	Web browser based on WebKit engine and Qt Framework
 LICENSE=	GPLv3
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		cmake:outsource desktop-file-utils qt:5 ssl tar:xz kde:5
+USES=		cmake desktop-file-utils qt:5 ssl tar:xz kde:5
 USE_QT=		core dbus declarative gui location network printsupport \
 		sql webchannel webengine widgets x11extras \
 		buildtools_build qmake_build linguist_build
