--- a/ports-overlay/x11/lumina-core/Makefile
+++ b/ports-overlay/x11/lumina-core/Makefile
@@ -2,7 +2,7 @@
 
 PORTNAME=	lumina-core
 PORTVERSION=	1.4.2
-PORTREVISION=	201901150747
+PORTREVISION=	201901181024
 CATEGORIES=	x11
 
 MAINTAINER=	jt@ixsystems.com
@@ -47,9 +47,9 @@ USE_QT=		core gui widgets network svg multimedia imageformats \
 		buildtools_build x11extras concurrent
 
 USE_GITHUB=	yes
-GH_ACCOUNT=	trueos
+GH_ACCOUNT=	lumina-desktop
 GH_PROJECT=	lumina
-GH_TAGNAME=	d101fdee54adc076c8e54dd4d6a6239aa1014901
+GH_TAGNAME=	d05457c81eb34e9e649ef09dfb516cf1373df45a
 WRKSRC_SUBDIR=	src-qt5/core
 
 #Setup the qmake configuration options
