--- a/ports-overlay/trident/trident-installer/Makefile
+++ b/ports-overlay/trident/trident-installer/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	trident-installer
-PORTVERSION=	201904020905
+PORTVERSION=	201904101627
 CATEGORIES=	trident
 
 MAINTAINER=	ken@ixsystems.com
@@ -11,12 +11,15 @@ LICENSE=	BSD2CLAUSE
 
 RUN_DEPENDS=	lumina-coreutils>=0:x11/lumina-coreutils \
 		trident-icons>=0:trident/trident-icons \
+		jq>=0:textproc/jq \
 		cursor-chameleon-pearl>=0:x11-themes/cursor-chameleon-pearl \
 		xinit>=0:x11/xinit \
 		/boot/modules/drm.ko:graphics/drm-current-kmod \
 		xorg-minimal>=0:x11/xorg-minimal \
 		xf86-video-scfb>=0:x11-drivers/xf86-video-scfb \
-		setxkbmap>=0:x11/setxkbmap
+		setxkbmap>=0:x11/setxkbmap \
+		pc-sysinstall>=0:sysutils/pc-sysinstall
+		
 
 USES=	qmake qt:5
 USE_QT=	core gui widgets svg concurrent \
@@ -24,7 +27,7 @@ USE_QT=	core gui widgets svg concurrent \
 USE_GITHUB=	yes
 GH_ACCOUNT=	project-trident
 GH_PROJECT=	trident-installer
-GH_TAGNAME=	ca97baf4fff8793439a2a623013ab05fc81a823e
+GH_TAGNAME=	f5ae6dfb47341afa16c7ecca19b779a8513117ab
 WRKSRC_SUBDIR=	src-qt5
 
 .include <bsd.port.mk>
