--- a/ports-overlay/trident/Makefile
+++ b/ports-overlay/trident/Makefile
@@ -1,10 +1,10 @@
 # $FreeBSD$
 #
 
-    COMMENT = Trident Desktop related ports
+
 
     SUBDIR += trident-core
-    SUBDIR += trident-icons
     SUBDIR += trident-installer
+    SUBDIR += trident-updatemgr
 
 .include <bsd.port.subdir.mk>
