--- a/ports-overlay/trident/trident-core/Makefile
+++ b/ports-overlay/trident/trident-core/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	trident-core
-PORTVERSION=	201907150945
+PORTVERSION=	201907171442
 CATEGORIES=	trident
 
 MAINTAINER=	ken@project-trident.org
@@ -26,7 +26,7 @@ RUN_DEPENDS=	${LOCALBASE}/sbin/PCDMd:x11/pcdm \
 		xorg-minimal>=0:x11/xorg-minimal \
 		cuse4bsd-kmod>=0:multimedia/cuse4bsd-kmod \
 		webcamd>=0:multimedia/webcamd \
-		drm-kmod>=0:graphics/drm-kmod \
+		${NONEXISTENT}:graphics/drm-kmod \
 		xf86-video-scfb>=0:x11-drivers/xf86-video-scfb \
 		xdg-user-dirs>=0:devel/xdg-user-dirs \
 		trident-icons>=0:trident/trident-icons \
@@ -40,7 +40,7 @@ RUN_DEPENDS=	${LOCALBASE}/sbin/PCDMd:x11/pcdm \
 USE_GITHUB=	yes
 GH_ACCOUNT=	project-trident
 GH_PROJECT=	trident-core
-GH_TAGNAME=	bef81db75031e6dc115abfa48b233046abfed16b
+GH_TAGNAME=	7020bb61071dcbc498aa66f11ffe80370cfe45b0
 
 NO_BUILD=	yes
 
